<resources>
    <string name="app_name">UsersApp</string>
    <string name="hello_users_fragment">Users Fragment</string>
    <string name="hello_details_fragment">Details Fragment</string>
    <string name="text_on_swipe">Удаление</string>
    <string name="menu_item_edit_title">Редактировать</string>
    <string name="menu_item_apply_title">Применить</string>
    <string name="menu_item_delete_title">Удалить пользователя</string>
    <string name="users_list_network_error">Проверьте интернет соединение и повторите попытку</string>
    <string name="users_list_network_lost_results_from_database">Отсутствует интернет соединение. Показаны
        результаты из базы данных.
    </string>
    <string name="users_list_empty_database_error">База данных пуста. Проверьте соединение с интернетом и обновите
        экран
    </string>
    <string name="users_details_first_name_hint">Введите имя</string>
    <string name="users_details_last_name_hint">Введите фамилию</string>
    <string name="users_details_email_hint">Введите email</string>
    <string name="user_details_fragment_title">Подробная информация</string>
    <string name="users_fragment_title">Список пользователей</string>
    <string name="users_details_fragment_last_name_label">Фамилия:</string>
    <string name="users_details_fragment_first_name_label">Имя:</string>
    <string name="users_details_fragment_email_label">Email:</string>
    <string name="users_list_fragment_title">Список пользователей</string>
</resources>
