<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto"
      xmlns:tools="http://schemas.android.com/tools">
    <item
            android:id="@+id/menu_edit"
            android:title="@string/menu_item_edit_title"
            android:icon="@drawable/ic_edit_black_24dp"
            app:showAsAction="ifRoom"/>
    <item
            android:id="@+id/menu_apply"
            android:title="@string/menu_item_apply_title"
            android:icon="@drawable/ic_apply"
            app:showAsAction="ifRoom"
            android:visible="false"
            tools:visible="true"/>
    <item
            android:id="@+id/menu_delete"
            android:title="@string/menu_item_delete_title"
            android:icon="@drawable/ic_delete"
            app:showAsAction="ifRoom"
            tools:visible="true"/>
</menu>