<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto" xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".ui.screens.UserDetailsFragment">


    <ru.aevshvetsov.usersapp.custom.AvatarImageView
            android:id="@+id/iv_users_details_avatar"
            android:layout_width="150dp"
            android:layout_height="150dp"
            app:layout_constraintEnd_toEndOf="parent"
            android:layout_marginEnd="@dimen/standard_margin"
            app:layout_constraintStart_toStartOf="parent"
            android:layout_marginStart="@dimen/standard_margin"
            android:layout_marginTop="@dimen/standard_margin"
            app:layout_constraintTop_toTopOf="parent"/>
    <TextView
            android:id="@+id/tv_users_details_first_name"
            style="@style/users_info_labels_style"
            android:text="@string/users_details_fragment_first_name_label"
            app:layout_constraintTop_toBottomOf="@id/iv_users_details_avatar"
            app:layout_constraintStart_toStartOf="parent"/>

    <EditText
            android:id="@+id/et_users_details_first_name"
            app:layout_constraintTop_toBottomOf="@id/tv_users_details_first_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="FIRST NAME"
            android:hint="@string/users_details_first_name_hint"
            style="@style/users_info_edit_text_style"/>

    <TextView
            android:id="@+id/tv_users_details_last_name"
            style="@style/users_info_labels_style"
            android:text="@string/users_details_fragment_last_name_label"
            app:layout_constraintTop_toBottomOf="@id/et_users_details_first_name"
            app:layout_constraintStart_toStartOf="parent"
    />

    <EditText
            android:id="@+id/et_users_details_last_name"
            style="@style/users_info_edit_text_style"
            app:layout_constraintTop_toBottomOf="@id/tv_users_details_last_name"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="LAST NAME"
            android:hint="@string/users_details_last_name_hint"/>
    <TextView
            android:id="@+id/tv_users_details_email"
            style="@style/users_info_labels_style"
            android:text="@string/users_details_fragment_email_label"
            app:layout_constraintTop_toBottomOf="@id/et_users_details_last_name"
            app:layout_constraintStart_toStartOf="parent"
    />
    <EditText
            android:id="@+id/et_users_details_email"
            style="@style/users_info_edit_text_style"
            app:layout_constraintTop_toBottomOf="@id/tv_users_details_email"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            tools:text="EMAIL"
            android:hint="@string/users_details_email_hint"/>

</androidx.constraintlayout.widget.ConstraintLayout>